using enhanced switch